pkg/lang/testdata/ub/manifest/valid/replace-to-local.ub
requires: { 'github.com/x/y': 'v1.0.0' }
replace:  { 'github.com/cloudboss/unobin-library-aws': '../../../..' }
