pkg/lang/testdata/ub/manifest/invalid/duplicate-dependency.ub
requires: {
  'github.com/x/y': 'v1.0.0'
  'github.com/x/y': 'v2.0.0'
}
